Stable version commit

--- a/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
+++ b/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
@@ -118,78 +118,77 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="SimpleImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>134, 17</value>
+    <value>112, 14</value>
   </metadata>
   <metadata name="menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>15, 14</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="tsFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>426, 17</value>
   </metadata>
   <metadata name="detailImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>568, 17</value>
+    <value>474, 14</value>
   </metadata>
   <data name="detailImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAE
-        DQAAAk1TRnQBSQFMAgEBAwEAAVgBAAFYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEB4AA0ABcQMsAUT4AANKAYoDSAGFAlcBVQG3Ax0BKjgAAy0BRgNdAdIDaQH/
-        A2UB/wNgAf8DXAH/A1gB/wNdAdcsAAMRARcDFgEfAwQBBmAAAWgBYgFcAeIDAAEBAk4BTQGWAbUBiwEy
-        AfsCTgFNAZUDDwEUKAADMAFLA1wBzAOjAf8BxgHFAcQB/wHZAdQB0wH/AdQBzwHOAf8B0wHOAc0B/wHT
-        Ac4BzQH/AegC5QH/A1kB/xAAA0ABcQFWAVwBVAHnAVYBWQFTAesDRQF/AwcBCgFFAUYBRQF+AVgBYgFY
-        AeMBLQGSAQQB/wEqAY8BAQH/AT8BgAEzAfcBVQFWAVUBsQMmAThYAAHdAZYBLwH/AygBPAMCAQMCUgFQ
-        AaQB3QGWAS8B/wF+AWsBUAHvAkIBQQFzAwQBBhwAA1wByQOzAf8D1AH/AeEC3wH/AcUBvwG9Af8BvQG1
-        AbMB/wG5AbEBsAH/AbkBsQGuAf8BtwGvAa4B/wHTAc4BzQH/A10B/wwAAy8BSQEjAUUBAAH/ASEBQgEA
-        Af8BHgE/AQAB/wEZAToBAAH/AVoBZAFVAecBOQGfARIB/wE2AZwBDwH/ATMBmQELAf8BMAGXAQgB/wEt
-        AZQBBQH/ASoBkQEBAf8BPQGOARQB/QFFAUYBRQF+VAAB3QGWAS8B/wJOAU0BlgQAAwQBBgJWAVUBtAHd
-        AZYBLwH/Ad0BlgEvAf8BYwFgAVcB3wM2AVkDAAEBFAADogH/A/AB/wPgAf8B1ALSAf8BvgG2AbUB/wG8
-        AbUBtAH/AbsBtAGyAf8BugGyAbEB/wG5AbEBrwH/AdQBzwHOAf8DYgH/DAADUwGqAScBTAEAAf8BJgFJ
-        AQAB/wEjAUYBAAH/ASwBYQEAAf8BKgFkAQAB/wE7AZsBFwH/ATYBlgEUAf8BMgGPAQ4B/wEzAZUBDQH/
-        ATMBmwEMAf8BMAGZAQkB/wEtAZYBBgH/ASoBkwECAf8DQgF0UAAB3QGWAS8B/wF4AWoBWQHrAwMBBAQA
-        AwcBCgJbAVkBwwHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wNZAccUAAOoAf8D6gH/A90B/wHVAdQB0wH/
-        AcABuQG3Af8BvgG3AbYB/wG9AbYBtAH/AbsBtAGzAf8BuwGzAbEB/wHUAdABzwH/A2gB/wwAAV0BXgFX
-        AeUBKwFSAQAB/wEpAU8BAAH/ASoBVAEAAf8BNwGBAQAB/wEuAWYBAAH/AUIBmgEqAf8BWAHKAUsB/wFR
-        AcMBQwH/ATYBjwEaAf8BKQFwAQAB/wE2AZ0BDwH/ATQBngENAf8BMQGbAQoB/wE+AX0BMQH4AxgBIUwA
-        Ad0BlgEvAf8B3QGWAS8B/wMuAUgIAAMLAQ8BXgFcAVgB0QHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/xQA
-        A68B/wPrAf8D3QH/AdcC1QH/AcEBuwG5Af8BwAG5AbgB/wG+AbgBtgH/ATABoQE3Af8BLAGUASwB/wHW
-        AdEB0AH/A20B/wwAATwBZgEMAf4BLwFZAQEB/wEtAVYBAAH/ATIBZAEAAf8BOgGEAQAB/wFMAZ0BKQH/
-        AYIB5wFxAf8BcgHmAWwB/wFtAecBZgH/AWkB5gFhAf8BOgGSARwB/wEuAYMBAwH/AToBpQEVAf8BNwGi
-        ARIB/wE0AaABDwH/A0oBikwAAd0BlgEvAf8B3QGWAS8B/wNRAaIMAAMQARUBYwFfAVoB2wHdAZYBLwH/
-        Ad0BlgEvAf8UAAO1Af8D7AH/A94B/wHZAtgB/wHDAb0BuwH/AcIBuwG6Af8BwQG6AbkB/wGgAcgBpAH/
-        AUUBqQFLAf8B1wHTAdEB/wNzAf8MAAFLAV4BIQH6ATMBXwEBAf8BMQFdAQEB/wE2AWoBAAH/ATwBhgEA
-        Af8BdAHMAWMB/wGOAecBiAH/AYkB5gGDAf8BhAHmAXMB/wF0AeYBbgH/AV0BxQFNAf8BKwFqAQAB/wE9
-        AaQBGAH/AT0BqgEaAf8BOgGnARcB/wFYAVwBWAHRTAAB3QGWAS8B/wHdAZYBLwH/AYoBdQFOAfIDBgEI
-        BAADBQEHAysBQgMWAR4BaAFiAVgB4wHdAZYBLwH/FAADuwH/A+wB/wPfAf8B2gLZAf8BxgG/Ab4B/wHE
-        Ab4BvAH/AcMBvAG7Af8BwQG7AbkB/wHAAbkBuAH/AdcC0wH/A4QB/wwAAVsBYAFbAdYBNwFmAQIB/wE1
-        AWMBAQH/ATcBZwEBAf8BQQGMAQAB/wGJAc8BbAH/AZoB5wGVAf8BlQHmAZAB/wGQAeYBigH/AYsB5QGF
-        Af8BZwHHAVYB/wExAW8BAAH/AT4BngEVAf8BQwGxASMB/wFAAa4BHwH/AUkBgAFCAfVMAAHdAZYBLwH/
-        AYYBcQFTAfEDPAFmAwcBCgM/AW0BaAFiAVgB4wHdAZYBLwH/A1ABngMiATEBcgFlAVUB6hQAA8AB/wPs
-        Af8D4AH/Ad0C3AH/AccBwQHAAf8BkgKRAf8DjwH/A40B/wOKAf8B2QHVAdQB/wOLAf8MAAFLAUwBSwGP
-        ATsBbQECAf8BOgFqAQIB/wE4AWcBAQH/AUEBiAEAAf8BYgGtATcB/wGmAecBogH/AaEB5wGdAf8BnAHm
-        AZcB/wGXAeUBkgH/AVIBoQErAf8BNwGAAQAB/wFEAaQBHAH/AUoBuAErAf8BRwG1AScB/wFNAZgBLwH6
-        TAADVgG2AxsBJgNBAXIBbgFnAVgB5gHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wHdAZYBLwH/A1kBxwMy
-        AVEUAAPGAf8D7wH/A+EB/wPdAf8ByAHDAcIB/wHIAcIBwQH/AcYBwQG/Af8BxQG/Ab4B/wHDAb0BuwH/
-        AdoB1gHVAf8DkQH/DAADGgEkAU0BcwEiAfoBPgFxAQIB/wE8AW4BAgH/ATsBbQECAf8BQgGKAQEB/wFm
-        Aa8BOQH/AZQB0QGBAf8BjQHJAXIB/wFVAZoBMgH/ATwBhwEAAf8BOwGGAQAB/wFPAbgBLgH/AVABvgEz
-        Af8BTQG8ATAB/wFfAWUBXQHgTAADQgF2AXIBZQFYAekB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGW
-        AS8B/wHdAZYBLwH/AbsBfAEwAfwCUQFQAZ8DFQEdFAADywH/A+kB/wPpAf8B4gLhAf8BywHGAcQB/wGY
-        ApcB/wGWApUB/wGUApMB/wGSApEB/wHbAdcB1gH/A5gB/xAAA0QBeQFCAYMBAwH/AUABgAEDAf8BPgFy
-        AQIB/wE8AW8BAgH/ATsBbgECAf8BOQFsAQEB/wE1AWQBAQH/AS8BWgEAAf8BPwGJAQAB/wFIAaABFAH/
-        AVkByAE9Af8BVgHFAToB/wFTAcIBNwH/AlMBTwGlTAAB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGW
-        AS8B/wHdAZYBLwH/AcgBgQE6Af4DVAGvAx0BKhwAAy4BSANnAeQD3wH/A+oB/wHPAcoByQH/AcsBxgHF
-        Af8BygHEAcMB/wHIAcMBwQH/AccCwQH/AdwB2QHYAf8DngH/FAACSAFHAYMBTwF/AQ4B/gFDAYQBAwH/
-        AUABgQECAf8BPwFzAQIB/wE9AXABAgH/ATsBbQEBAf8BNgFlAQEB/wFcAWQBVQHnAWABzgFDAf8BXwHP
-        AUUB/wFcAcwBQgH/AVkBygE/Af8DLAFETAAB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wJZ
-        AVYBvgMmATgoAAMLAQ8DVgGrA9wB/wHmAuMB/wHhAd4B3AH/Ad8C3AH/Ad8B3AHbAf8B3gLbAf8B7gLs
-        Af8DpQH/GAADJwE6A1YBswFbAXcBLgH4AUMBhQEDAf8BQQGCAQIB/wFbAWEBWgHhA0QBewMHAQkDSAGD
-        AWEBdwFZAesBZQFsAV4B5QM/AW1QAAHdAZYBLwH/Ad0BlgEvAf8CXAFaAc0DLgFHOAADUQGfA6EB+wPE
-        Af8DwAH/A7sB/wO2Af8DsAH/A1IBpyAAAwQBBgMWAR8DEAEWbAABYgFhAV4B2gM1AVcDAAEB6AABQgFN
-        AT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAecF/wIAAeEB/wH4AQcB/wEfAgAB4AF/
-        AeABBwGAAQcCAAHgAR8BwAEHAQABAwIAAeQBBwHAAQcBAAEBAgAB4gEHAcABBwQAAeMBBwHAAQcEAAHj
-        AYcBwAEHBAAB4QEHAcABBwQAAeABBwHAAQcEAAHgAQcBwAEHBAAB4AEHAcABBwGAAwAB4AEfAcABBwHA
-        AwAB4AF/AeABBwHgAQECAAHhAf8B+AEHAfgB/wIAAeMF/wIACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
+        DAAAAk1TRnQBSQFMAgEBAwEAAcgBAAHIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEB4AA0ABcQMsAUT4AANKAYoDSAGFAlcBVQG3Ax0BKjgAAy0BRgNdAdIDWwH/
+        A1cB/wNSAf8DTgH/A0oB/wNdAdcsAAMRARcDFgEfAwQBBmAAAmEBXQHiAwABAQJOAU0BlgGSAXkBMgH7
+        Ak4BTQGVAw8BFCgAAzABSwNcAcwDowH/AcYBxQHEAf8B2QHUAdMB/wHUAc8BzgH/AdMBzgHNAf8B0wHO
+        Ac0B/wHoAuUB/wNLAf8QAANAAXEDXAHnA1kB6wNFAX8DBwEKAUUBRgFFAX4BWAFfAVgB4wEfAZIBAAH/
+        ARwBjwEAAf8BUQFtAUQB9wFVAVYBVQGxAyYBOFgAAd0BlgEhAf8DKAE8AwIBAwJSAVABpAHdAZYBIQH/
+        AmIBWAHvAkIBQQFzAwQBBhwAA1wByQOzAf8D1AH/AeEC3wH/AcUBvwG9Af8BvQG1AbMB/wG5AbEBsAH/
+        AbkBsQGuAf8BtwGvAa4B/wHTAc4BzQH/A08B/wwAAy8BSQEVATcBAAH/ARMBNAEAAf8BEAExAQAB/wEL
+        ASwBAAH/AVwBZAFcAecBKwGfAQQB/wEoAZwBAQH/ASUBmQEAAf8BIgGXAQAB/wEfAZQBAAH/ARwBkQEA
+        Af8BQAGOASIB/QFFAUYBRQF+VAAB3QGWASEB/wJOAU0BlgQAAwQBBgJWAVUBtAHdAZYBIQH/Ad0BlgEh
+        Af8CXAFXAd8DNgFZAwABARQAA6IB/wPwAf8D4AH/AdQC0gH/Ab4BtgG1Af8BvAG1AbQB/wG7AbQBsgH/
+        AboBsgGxAf8BuQGxAa8B/wHUAc8BzgH/A1QB/wwAA1MBqgEZAT4BAAH/ARgBOwEAAf8BFQE4AQAB/wEe
+        AVMBAAH/ARwBVgEAAf8BLQGbAQkB/wEoAZYBBgH/ASQBjwEAAf8BJQGVAQAB/wElAZsBAAH/ASIBmQEA
+        Af8BHwGWAQAB/wEcAZMBAAH/A0IBdFAAAd0BlgEhAf8BYQFgAVkB6wMDAQQEAAMHAQoCWwFZAcMB3QGW
+        ASEB/wHdAZYBIQH/Ad0BlgEhAf8DWQHHFAADqAH/A+oB/wPdAf8B1QHUAdMB/wHAAbkBtwH/Ab4BtwG2
+        Af8BvQG2AbQB/wG7AbQBswH/AbsBswGxAf8B1AHQAc8B/wNaAf8MAANeAeUBHQFEAQAB/wEbAUEBAAH/
+        ARwBRgEAAf8BKQGBAQAB/wEgAVgBAAH/ATQBmgEcAf8BSgHKAT0B/wFDAcMBNQH/ASgBjwEMAf8BGwFi
+        AQAB/wEoAZ0BAQH/ASYBngEAAf8BIwGbAQAB/wE+AW8BPgH4AxgBIUwAAd0BlgEhAf8B3QGWASEB/wMu
+        AUgIAAMLAQ8CXAFYAdEB3QGWASEB/wHdAZYBIQH/Ad0BlgEhAf8UAAOvAf8D6wH/A90B/wHXAtUB/wHB
+        AbsBuQH/AcABuQG4Af8BvgG4AbYB/wEiAaEBKQH/AR4BlAEeAf8B1gHRAdAB/wNfAf8MAAE8AWYBDAH+
+        ASEBSwEAAf8BHwFIAQAB/wEkAVYBAAH/ASwBhAEAAf8BPgGdARsB/wGCAecBYwH/AWQB5gFeAf8BXwHn
+        AVgB/wFbAeYBUwH/ASwBkgEOAf8BIAGDAQAB/wEsAaUBBwH/ASkBogEEAf8BJgGgAQEB/wNKAYpMAAHd
+        AZYBIQH/Ad0BlgEhAf8DUQGiDAADEAEVAl8BWgHbAd0BlgEhAf8B3QGWASEB/xQAA7UB/wPsAf8D3gH/
+        AdkC2AH/AcMBvQG7Af8BwgG7AboB/wHBAboBuQH/AaAByAGkAf8BNwGpAT0B/wHXAdMB0QH/A2UB/wwA
+        Ak0BKQH6ASUBUQEAAf8BIwFPAQAB/wEoAVwBAAH/AS4BhgEAAf8BZgHMAVUB/wGOAecBiAH/AYkB5gGD
+        Af8BhAHmAWUB/wFmAeYBYAH/AU8BxQE/Af8BHQFcAQAB/wEvAaQBCgH/AS8BqgEMAf8BLAGnAQkB/wFY
+        AVwBWAHRTAAB3QGWASEB/wHdAZYBIQH/AWgBZwFZAfIDBgEIBAADBQEHAysBQgMWAR4CXwFYAeMB3QGW
+        ASEB/xQAA7sB/wPsAf8D3wH/AdoC2QH/AcYBvwG+Af8BxAG+AbwB/wHDAbwBuwH/AcEBuwG5Af8BwAG5
+        AbgB/wHXAtMB/wOEAf8MAAFbAWABWwHWASkBWAEAAf8BJwFVAQAB/wEpAVkBAAH/ATMBjAEAAf8BiQHP
+        AV4B/wGaAecBlQH/AZUB5gGQAf8BkAHmAYoB/wGLAeUBhQH/AVkBxwFIAf8BIwFhAQAB/wEwAZ4BBwH/
+        ATUBsQEVAf8BMgGuAREB/wFJAWcBQgH1TAAB3QGWASEB/wFnAWQBUwHxAzwBZgMHAQoDPwFtAl8BWAHj
+        Ad0BlgEhAf8DUAGeAyIBMQJcAVUB6hQAA8AB/wPsAf8D4AH/Ad0C3AH/AccBwQHAAf8BkgKRAf8DjwH/
+        A40B/wOKAf8B2QHVAdQB/wOLAf8MAAFLAUwBSwGPAS0BXwEAAf8BLAFcAQAB/wEqAVkBAAH/ATMBiAEA
+        Af8BVAGtASkB/wGmAecBogH/AaEB5wGdAf8BnAHmAZcB/wGXAeUBkgH/AUQBoQEdAf8BKQGAAQAB/wE2
+        AaQBDgH/ATwBuAEdAf8BOQG1ARkB/wFNAXkBLwH6TAADVgG2AxsBJgNBAXICYQFYAeYB3QGWASEB/wHd
+        AZYBIQH/Ad0BlgEhAf8B3QGWASEB/wNZAccDMgFRFAADxgH/A+8B/wPhAf8D3QH/AcgBwwHCAf8ByAHC
+        AcEB/wHGAcEBvwH/AcUBvwG+Af8BwwG9AbsB/wHaAdYB1QH/A5EB/wwAAxoBJAFNAWQBKQH6ATABYwEA
+        Af8BLgFgAQAB/wEtAV8BAAH/ATQBigEAAf8BWAGvASsB/wGUAdEBgQH/AY0ByQFkAf8BRwGaASQB/wEu
+        AYcBAAH/AS0BhgEAAf8BQQG4ASAB/wFCAb4BJQH/AT8BvAEiAf8DXwHgTAADQgF2AmIBWAHpAd0BlgEh
+        Af8B3QGWASEB/wHdAZYBIQH/Ad0BlgEhAf8B3QGWASEB/wGaAW4BKwH8AlEBUAGfAxUBHRQAA8sB/wPp
+        Af8D6QH/AeIC4QH/AcsBxgHEAf8BmAKXAf8BlgKVAf8BlAKTAf8BkgKRAf8B2wHXAdYB/wOYAf8QAANE
+        AXkBNAGDAQAB/wEyAYABAAH/ATABZAEAAf8BLgFhAQAB/wEtAWABAAH/ASsBXgEAAf8BJwFWAQAB/wEh
+        AUwBAAH/ATEBiQEAAf8BOgGgAQYB/wFLAcgBLwH/AUgBxQEsAf8BRQHCASkB/wJTAU8BpUwAAd0BlgEh
+        Af8B3QGWASEB/wHdAZYBIQH/Ad0BlgEhAf8B3QGWASEB/wGsAX8BOgH+A1QBrwMdASocAAMuAUgDYQHk
+        A98B/wPqAf8BzwHKAckB/wHLAcYBxQH/AcoBxAHDAf8ByAHDAcEB/wHHAsEB/wHcAdkB2AH/A54B/xQA
+        AkgBRwGDAU8BfwEOAf4BNQGEAQAB/wEyAYEBAAH/ATEBZQEAAf8BLwFiAQAB/wEtAV8BAAH/ASgBVwEA
+        Af8BXAFkAVwB5wFSAc4BNQH/AVEBzwE3Af8BTgHMATQB/wFLAcoBMQH/AywBREwAAd0BlgEhAf8B3QGW
+        ASEB/wHdAZYBIQH/Ad0BlgEhAf8CWQFWAb4DJgE4KAADCwEPA1YBqwPcAf8B5gLjAf8B4QHeAdwB/wHf
+        AtwB/wHfAdwB2wH/Ad4C2wH/Ae4C7AH/A6UB/xgAAycBOgNWAbMBXAFlAT4B+AE1AYUBAAH/ATMBggEA
+        Af8BWwFhAVsB4QNEAXsDBwEJA0gBgwJgAVkB6wJlAV4B5QM/AW1QAAHdAZYBIQH/Ad0BlgEhAf8CXAFa
+        Ac0DLgFHOAADUQGfA40B+wPEAf8DwAH/A7sB/wO2Af8DsAH/A1IBpyAAAwQBBgMWAR8DEAEWbAACYQFe
+        AdoDNQFXAwABAegAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAHnBf8CAAHh
+        Af8B+AEHAf8BHwIAAeABfwHgAQcBgAEHAgAB4AEfAcABBwEAAQMCAAHkAQcBwAEHAQABAQIAAeIBBwHA
+        AQcEAAHjAQcBwAEHBAAB4wGHAcABBwQAAeEBBwHAAQcEAAHgAQcBwAEHBAAB4AEHAcABBwQAAeABBwHA
+        AQcBgAMAAeABHwHAAQcBwAMAAeABfwHgAQcB4AEBAgAB4QH/AfgBBwH4Af8CAAHjBf8CAAs=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
